# otus-cpp-basics

./: .gitignore  Ball.cpp  Ball.hpp  CMakeLists.txt  Color.cpp  Color.hpp  DoubleLinkedListContainer.hpp  Effects.cpp  Effects.hpp  IContainer.hpp  LinkedListContainer.hpp  Physics.cpp  Physics.hpp  Point.hpp  README.md  ReservingSerialContainer.hpp  SerialContainer.hpp  World.cpp  World.hpp  game.cpp  main.cpp  max.hpp  mean.hpp  min.hpp  pct90.hpp  sparkle.hpp  statistics.cpp  stddev.hpp
args/: CMakeLists.txt  args.cpp  args.h  args_test.cpp
game_engine/: CMakeLists.txt  game_engine.cpp  game_engine.h
rng/: CMakeLists.txt  rng.cpp  rng.h
scores/: CMakeLists.txt  scores.cpp  scores.h
src/: DoubleLinkedListContainer.hpp
tests/: DoubleLinkedListContainer_tests.cpp  SerialContainer_tests.cpp
